# Trendio_AI_RAG-Based_Menswear_Assistant

./: .env.example  .gitignore  Dockerfile  README.md  config.py  main.py  pyproject.toml
api/: chat.py  dependencies.py  outfit.py  recommendations.py  search.py
data/faiss_index/: embeddings.npy  index.faiss  products.json
scripts/: build_index.py
services/: embedder.py  outfit.py  rag.py  vector_store.py
