[project]
name = "trendio-ai"
version = "0.1.0"
description = "AI service for Trendio menswear assistant"
authors = [
    {name = "Jayesh Afre",email = "jayeshafre1@gmail.com"}
]
requires-python = "3.11.9"
dependencies = [
    "fastapi[standard] (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.46.0,<0.47.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "sentence-transformers (>=5.4.1,<6.0.0)",
    "faiss-cpu (>=1.13.2,<2.0.0)",
    "groq (>=1.2.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
